syntax = "proto3";
package pb;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/hosseintrz/torob/user/pb";

message UserMsg {
  string id = 1;
  string email = 2;
  string username = 3;
  string password = 4;
  string fullname = 5;
  google.protobuf.Timestamp createdDate = 6;
  enum Role{
    UNKNOWN = 0;
    NORMAL = 1;
    ADMIN = 2;
    OWNER = 3;
  }
  Role role = 7;
}
message UserResponse{
  string message = 1;
}

message UserRequest{
  string username = 1;
}

service User{
  rpc AddUser(UserMsg) returns (UserResponse){}
  rpc GetUser(UserRequest) returns (UserMsg){}
  rpc DeleteUser(UserRequest) returns (UserResponse){}
  rpc UpdateUser(UserMsg) returns (UserResponse){}
}